<?xml version="1.0" encoding="utf-8"?>

<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:id="@+id/card_view"
    android:layout_gravity="center"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="@dimen/bake_item_layout_margin"
    card_view:cardCornerRadius="@dimen/bake_item_layout_card_corner_raduis">

        <ImageView
            android:id="@+id/bake_img"
            android:layout_width="match_parent"
            android:layout_height="@dimen/img_home_height"
            android:scaleType="centerCrop"
            android:contentDescription="@string/bake_recipe_icon" />

        <TextView
            android:id="@+id/bake_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/colorWhite"
            android:layout_gravity="bottom"
            android:textSize="@dimen/baking_text_size"
            android:textStyle="bold"
            android:fontFamily="sans-serif"
            android:background="@color/colorBlackTranparent"
            />

    </android.support.v7.widget.CardView>

