...
        android:layout_width="match_parent"
        android:layout_height="@dimen/exoplayer_height"
        android:layout_marginTop="@dimen/step_layout_margin"
        />

    <TextView
        android:id="@+id/step_description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/step_description_margin"
        android:layout_below="@id/video_view"
        android:textAlignment="center"
        android:textSize="@dimen/step_description_text_size"
...
